docs: update adr init

--- a/docs/adr/0001-init.md
+++ b/docs/adr/0001-init.md
@@ -8,11 +8,57 @@
 
 ## Контекст
 
-Согласно [ТЗ](../tor/tor-event-storming.md) 
+Согласно [ТЗ](../tor/tor-mvp-event-storming.md) нужно реализовать инструмент для проектирования систем, который будет использовать подход Event storming. Для этого необходимо изучить материалы по Event storming. На официальном сайте предлагается [книга](https://www.eventstorming.com/book/).
 
 ## Решение
 
+Текущие решение проектируется для MVP.
 
+### Доступность проекта
+
+1. сделать web решение
+2. сделать кроссплатформенное решение на одной технологии
+3. сделать кроссплатформенное решение для каждый платформы конкретно
+
+В данном случаи планирую выбрать web-решения, тк мой основной опыт был получен будучи js fullstack разработчиком. Если я выберу кроссплатформенное решение на одно технологии, то нужно будет потратить дополнительно X часов на изучение этой технологии. Если же выберу 3 пункт, то потрачу время на обучение и разработку на каждой технологии, поэтому 2 и 3 пункты нерациональны.
+
+Недостатки такого подхода, нет оптимизации под конкретную платформу, производительность будет хуже, чем если реализовывать все нативным образом.
+
+### UI/UX
+
+1. Выбрать UI библиотеку
+2. Выбрать CSS framework
+3. Найти дизайнера, который пропишет дизайн проекта
+
+В данном случаи UI библиотека, может создать доп ограничения в будущем, которые будет сложно обойти. В тоже время дизайнер для opensource проекта на этапе MVP слишком дорог. Так что склоняюсь к использованию CSS framework + БЭМ методология, в качестве CSS framework думаю использовать Tailwind CSS.
+
+Для проработки UX планирую использовать свой опыт и получая обратную связь от пользователей проекта.
+
+Недостатки: Кастомное решение обычно лучше, к тому же дизайнер сможет лучше проработать UI/UX.
+
+В качестве js framework/library планирую выбрать Vue3 (+ экосистему vue), тк мой наибольший опыт связна с этим ui-framework'ом. Соответственно, если выберу React/Angular итд., то придется добавить к времени разработки + Xч на изучение технологии.
+
+Недостатки: Технология X может быть производительнее и иметь лучше поддержку от сообщества.
+
+### Удобства распространения
+
+1. Сборка из исходников
+2. Docker
+
+Первый пункт будет доступен по дефолту, так же пользователи получат возможность сделать свой форк и вносить изменения. Второй пункт позволит быстро запускать проект на сервере, те удобный вариант self-hosted решения.
+
+### Масштабируемость
+
+Необходимо проектировать приложение согласно [The Twelve-Factor App](https://12factor.net/ru/)
+
+### Выбор backend
+
+в процессе...
+
+### Выбор DB
+
+в процессе...
 
 ## Последствия
 
+в процессе...
