--- a/docs/adr/0001-init.md
+++ b/docs/adr/0001-init.md
@@ -8,7 +8,7 @@
 
 ## Контекст
 
-Согласно [ТЗ](../tor/tor-mvp-event-storming.md) нужно реализовать инструмент для проектирования систем, который будет использовать подход Event storming. Для этого необходимо изучить материалы по Event storming. На официальном сайте предлагается [книга](https://www.eventstorming.com/book/).
+Согласно [ФТ](../functional-requirements/fr-mvp-event-storming.md) нужно реализовать инструмент для проектирования систем, который будет использовать подход Event storming. Для этого необходимо изучить материалы по Event storming. На официальном сайте предлагается [книга](https://www.eventstorming.com/book/).
 
 ## Решение
 
@@ -20,7 +20,7 @@
 2. сделать кроссплатформенное решение на одной технологии
 3. сделать кроссплатформенное решение для каждый платформы конкретно
 
-В данном случаи планирую выбрать web-решения, тк мой основной опыт был получен будучи js fullstack разработчиком. Если я выберу кроссплатформенное решение на одно технологии, то нужно будет потратить дополнительно X часов на изучение этой технологии. Если же выберу 3 пункт, то потрачу время на обучение и разработку на каждой технологии, поэтому 2 и 3 пункты нерациональны.
+web-решения - сделать быстрее и доступнее + имеется опыт в этом направлении.
 
 Недостатки такого подхода, нет оптимизации под конкретную платформу, производительность будет хуже, чем если реализовывать все нативным образом.
 
@@ -32,13 +32,22 @@
 
 В данном случаи UI библиотека, может создать доп ограничения в будущем, которые будет сложно обойти. В тоже время дизайнер для opensource проекта на этапе MVP слишком дорог. Так что склоняюсь к использованию CSS framework + БЭМ методология, в качестве CSS framework думаю использовать Tailwind CSS.
 
-Для проработки UX планирую использовать свой опыт и получая обратную связь от пользователей проекта.
+Для проработки UX планируется использовать обратную связь от пользователей проекта.
 
 Недостатки: Кастомное решение обычно лучше, к тому же дизайнер сможет лучше проработать UI/UX.
 
-В качестве js framework/library планирую выбрать Vue3 (+ экосистему vue), тк мой наибольший опыт связна с этим ui-framework'ом. Соответственно, если выберу React/Angular итд., то придется добавить к времени разработки + Xч на изучение технологии.
+В качестве js framework/library планируется выбрать Vue3 (+ экосистему vue), тк имеется опыт.
 
 Недостатки: Технология X может быть производительнее и иметь лучше поддержку от сообщества.
+
+Выбор движка для канваса:
+
+1. 2d js движок [pixi.js](https://github.com/pixijs/pixijs)
+2. webassembly
+
+Планируется выбрать 2d js движок - pixi.js, тк с ним был опыт и проще реализовать MVP
+
+Webassembly - перспективнее за счет свой производительности, имеет смысл перейти на него в 2 версии, при условии, что будет получен фидбэк от пользователей о нехватке производительности для больших диаграмм.
 
 ### Удобства распространения
 
@@ -47,18 +56,8 @@
 
 Первый пункт будет доступен по дефолту, так же пользователи получат возможность сделать свой форк и вносить изменения. Второй пункт позволит быстро запускать проект на сервере, те удобный вариант self-hosted решения.
 
-### Масштабируемость
-
-Необходимо проектировать приложение согласно [The Twelve-Factor App](https://12factor.net/ru/)
-
-### Выбор backend
-
-в процессе...
-
-### Выбор DB
-
-в процессе...
-
 ## Последствия
 
-в процессе...
+С одной стороны получится сделать быстрое решение, которое будет запускаться в браузере.
+
+С другой может пострадать производительность на большом количестве элементов.
